# gardening_app

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  backfill_images.py  models.py  permapeople_api_documentation.htm  permapeople_sync.py  populate_plant_details.py  pyproject.toml  start.py
.github/workflows/: ci.yaml  train_model.yaml
apps/api/: Dockerfile
apps/api/app/: main.py
apps/api/app/db/: models.py  session.py
apps/api/docs/: database-model.md
apps/api/static/: drawing.js  planner.css  planner.js  style.css
apps/api/static/plant_ai_images/: experiments.jsonl
apps/api/templates/: base.html  bed_detail.html  index.html  library_detail.html  library_edit.html  planner.html  plant_detail.html  plants.html
apps/backend/app/: main.py
apps/backend/app/db/: models.py  session.py
apps/ml_service/: README.md
apps/ml_service/app/: chat_logger.py  chat_tools.py  llm_provider.py  main.py  recommender.py  watering_engine.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  style.css
infra/: README.md
infra/docker/: docker-compose.yml
infra/k8s/: api-deployment.yaml  ml-deployment.yaml
infra/terraform/: main.tf
ml/: README.md
ml/data/: generate_synthetic.py
ml/eda/: explore_features.py  missing_values.csv  missing_values.py  missing_values_20260409_145030.csv  missing_values_20260413_084305.csv
ml/evaluation/: metrics.py
ml/features/: build_features.py
ml/models/: recommender.pkl
ml/training/: train_recommender.py
notebooks/: README.md
permapeople_api_documentation_files/: core.css  main.css
scripts/: add_background_pattern.py  add_fk_indexes.py  add_more_plants.py  backfill_frost_dates.py  backfill_images.py  backfill_images_wiki.py  build_rag.py  fetch_wikimedia_images.py  gcs_backup.py  generate_plant_images.py  generate_plant_svg_icons.py  nightly_image_gen.bat  openfarm_wayback_sync.py  perenual_sync.bat  perenual_sync.py  permapeople_sync.py  populate_plant_details.py  rag_backfill.py  supplement_library.py  tamu_sync.py  trefle_sync.py  ufseeds_sync.py  usda_nutrition_sync.bat  usda_nutrition_sync.py
static/: drawing.js  planner.css  planner.js  style.css
templates/: base.html  bed_detail.html  beds.html  garden_detail.html  gardens.html  index.html  library.html  library_detail.html  library_edit.html  planner.html  plant_detail.html  plants.html  task_detail.html  tasks.html
tests/: conftest.py
tests/unit/: test_chat_tools.py  test_planner_api.py
(+52 files in other folders)
