[project]
name = "gardening-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "python-dotenv",
    "requests",
    "anthropic",
    "scikit-learn",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
eda = ["matplotlib", "seaborn", "jupyter"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
